# awesome-ctl

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTIONS.md  README.md  awesome.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pylint.yaml  pypi.yaml  release.yaml
awesome_ctl/: __init__.py  utils.py
awesome_ctl/api/: main.py
awesome_ctl/api/routes/: kubernetes.py
awesome_ctl/models/: __init__.py  user.py
awesome_ctl/repositories/: user_repo.py
awesome_ctl/services/: user_service.py
awesome_ctl/storage/: config.py  database.py
awesome_ctl/ui/: ui.py
awesome_ctl/ui/scss/: styles.scss
awesome_ctl/ui/static/css/: styles.css
awesome_ctl/ui/static/js/: main.js
awesome_ctl/ui/templates/: base.html
awesome_ctl/ui/templates/shared/: _base.html  _header.html  _logout.html  _main.html  _menu.html  _navigation.html  _stub.html  _stub_dashboard.html  _user.html
awesome_ctl_cli/: cli.py
tests/test_cli/: test_cli.py
