[tool.poetry]
name = "awesome-ctl"
version = "0.1.0"
description = "A comprehensive toolkit for CloudOps automation"
authors = ["J-Raghavan <mr.jayasimha@gmail.com>"]
packages = [
    { include = "awesome_ctl", from = "." }
]
readme = "README.md"
license = "MIT"
repository = "http://github.com/j-raghavan/awesome-ctl"

[tool.poetry.scripts]
awesome-ctl = "awesome_ctl.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"

# Add your project dependencies here
# Example:
# requests = "^2.26.0"

[tool.poetry.dev-dependencies]
# Add development dependencies here, e.g., for testing
testcontainers = "^3.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "awesome_ctl"

[tool.flit.metadata]
module = "awesome_ctl"
author = "J-Raghavan"
author-email = "mr.jayasimha@gmail.com"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
