[tool.poetry]
name = "awesome-ctl"
version = "0.1.0"
description = "A comprehensive toolkit for CloudOps automation"  # Keep it concise!
authors = ["J-Raghavan <mr.jayasimha@gmail.com>"]
packages = [{ include = "awesome_ctl", from = "." }]
readme = "README.md"
license = "MIT"
repository = "http://github.com/j-raghavan/awesome-ctl"

[tool.poetry.scripts]
awesome-ctl = "awesome_ctl_cli.cli:main"  # Note: "awesome_ctl_cli"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"  # Add Typer for your CLI
uvicorn = {version = "^0.23.2", extras = ["standard"]}  # For your FastAPI server
fastapi = "^0.98.0"
python-multipart = "^0.0.6"

# Example connector dependency (install as needed):
kubernetes = {version = "^26.1.0", optional = true}

# Example LLM dependency (choose your provider and add)
openai = {version = "^1.0.0", optional = true}

# ... other dependencies
pyfiglet = "^1.0.2"
python-dateutil = "^2.9.0.post0"

[tool.poetry.extras]  # Manage optional dependencies (connectors, LLMs)
kubernetes = ["kubernetes"]
openai = ["openai"]
# ... other optional groups

[tool.poetry.dev-dependencies]
testcontainers = "^3.0.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Style and Formatting (Optional, but recommended) ---
[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
known_first_party = "awesome_ctl"

# --- Testing ---
[tool.pytest.ini_options]
pythonpath = ["."]
# Consider adding markers for different test types (unit, integration):
# markers =
#     unit: mark tests as unit tests
#     integration: mark tests as integration tests